deploy/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "aincrad"
  labels:
    name: "aincrad"
