deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aincrad
  name: spring-boot
  labels:
    app: spring-boot
spec:
  selector:
    app: spring-boot
  ports:
    - name: http
      port: 80
      targetPort: 58094
  externalTrafficPolicy: Local
  type: LoadBalancer
  #external ip?
