deploy/dev/ingress.ka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aincrad
  name: spring-boot
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: aincrad.ka.spring-boot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 80
    - host: aincrad.spring-boot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 80
#---
#spec:
#  rules:
#    - http:
#        paths:
#          - pathType: Prefix
#            path: /foo(/|$)(.*)
#            backend:
#              service:
#                name: foo-service
#                port:
#                  number: 8080
#          - pathType: Prefix
#            path: /bar(/|$)(.*)
#            backend:
#              service:
#                name: bar-service
#                port:
#                  number: 8080
