deploy/dev/ingress.ki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aincrad
  name: spring-boot
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: aincrad.ki.spring-boot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 80
    - host: aincrad.spring-boot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot
                port:
                  number: 80
